# h2o

./: AGENTS.md  CLAUDE.md  HANDOFF_NEXT_SESSION.txt  README.md
Eagle Charts/: ElectricalConduitLoadingChart_0(1).xlsx  JME 20 FT Irrigation Loading Chart(1).xlsx  JME 20 FT Irrigation Loading Chart.xlsx  insert_statements.sql  jme_ABSLoadingChart.xlsx  jme_GravitySewerLoadingChart.xlsx  jme_PEGasPipeLoadingChart.xlsx  jme_SolvetWeldLoadingChart_0.xlsx  jme_ThreadedDropPipe-WellCasingLaodingChart.xlsx  jme_UtilityDuctLoadingChart.xlsx  jme_YellowGasPipeLoadingChart.xlsx  jme_YellowGasSleeveLoadingChart.xlsx
H2O/: .gitignore  CLAUDE.md  Procfile  README.md  h2o_packing_table_data_base_tables.sql  (+6 more)
archive/: AGENTS.md  (+4 more)
python_process/: .env.example  .gitignore  HANDOFF.md  README.md  STATUS.md  pyproject.toml  replacement.py  requirements-cloud.txt
python_process/cloud_app/: __init__.py  config.py  main.py
python_process/cloud_app/api/: admin.py  client.py
python_process/cloud_app/core/: lcm.py  ratios.py  solver.py
python_process/cloud_app/data/: __init__.py  admin_store.py  importer.py  repository.py  versioning.py
python_process/cloud_app/schemas/: models.py
python_process/cloud_app/scripts/: convert_legacy_js_to_canonical_json.py  migrate_current_json_to_normalized.py  run_parity_check.py  run_predeploy_smoke.py
python_process/cloud_app/ui/: client.html
python_process/cloud_app/ui_client/: branch_and_bound_engine.js  event_listener.js  order_table.js  select_skus.js
python_process/data/master/v20260217T171358Z/: metadata.json  product_types.parquet
(+162 files in other folders)
